--- a/app/styles/ui/history/_commit-summary.scss
+++ b/app/styles/ui/history/_commit-summary.scss
@@ -11,10 +11,6 @@
     height: 16px;
   }
 
-  .AvatarStack.AvatarStack--small.AvatarStack--three-plus {
-    min-width: 46px;
-  }
-
   .expander {
     position: absolute;
     width: 75px;
